@@ -3,6 +3,7 @@
   Fixed issue MR-514 - Window Proxy test failed without close button
   Fixed issue MR-521 - Right-Clicking in "Sessions" panel crashes mRemoteNG
   Fixed issue MR-525 - Could not start on windows 7 64bit
+  Fixed issue MR-538 - RDP loses connection when hiding config or connections pane
   Made minor improvements to the port scan functionality.
 
 1.71 Beta 5 (2013-06-09):
